--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-symbols": "~0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
