--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "expo-linking": "~7.0.5",
     "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
     "nativewind": "latest",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "expo-symbols": "~0.2.2"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
