--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/metro-runtime": "~4.0.1",
     "expo": "^52.0.37",
     "expo-constants": "~17.0.7",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
@@ -22,12 +23,13 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-gifted-charts": "^1.4.58",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "expo-linear-gradient": "~14.0.2"
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
